Don't try to duplicate the jsval typedef.  Bug 312003, r+sr=brendan