content/xul/document/src/nsXULPrototypeDocument.cpp
@@ -105,7 +105,7 @@ public:
     virtual JSObject *GetGlobalJSObject();
     virtual void OnFinalize(JSObject *aObject);
     virtual void SetScriptsEnabled(PRBool aEnabled, PRBool aFireTimeouts);
-    virtual nsresult SetNewArguments(PRUint32 aArgc, jsval* aArgv);
+    virtual nsresult SetNewArguments(PRUint32 aArgc, void* aArgv);
 
     // nsIScriptObjectPrincipal methods
     virtual nsIPrincipal* GetPrincipal();
@@ -934,7 +934,7 @@ nsXULPDGlobalObject::SetScriptsEnabled(PRBool aEnabled, PRBool aFireTimeouts)
 }
 
 nsresult
-nsXULPDGlobalObject::SetNewArguments(PRUint32 aArgc, jsval* aArgv)
+nsXULPDGlobalObject::SetNewArguments(PRUint32 aArgc, void* aArgv)
 {
     NS_NOTREACHED("waaah!");
     return NS_ERROR_UNEXPECTED;
